fixed projects layout issue

--- a/css/app.css
+++ b/css/app.css
@@ -969,11 +969,13 @@ nav {
       #projects .container .projects-container #nt-project {
         background-image: url("../img/nt.png");
         background-blend-mode: multiply;
-        background-size: cover; }
+        background-size: cover;
+        background-position: center; }
       #projects .container .projects-container #rcm-project {
         background-image: url("../img/rcm.png");
         background-blend-mode: multiply;
-        background-size: cover; }
+        background-size: cover;
+        background-position: center; }
       #projects .container .projects-container #ff-project {
         background-image: url("../img/ff.png");
         background-blend-mode: multiply;
