--- a/sass/layout/_projects.sass
+++ b/sass/layout/_projects.sass
@@ -57,10 +57,12 @@
                 background-image: url('../img/nt.png')
                 background-blend-mode: multiply
                 background-size: cover
+                background-position: center
             #rcm-project
                 background-image: url('../img/rcm.png')
                 background-blend-mode: multiply
                 background-size: cover
+                background-position: center
             #ff-project
                 background-image: url('../img/ff.png')
                 background-blend-mode: multiply
